--- a/README
+++ b/README
@@ -1,1 +1,11 @@
+Autor
+--------------------------------------
+Desarrollado por Esteban Fuentealba
+
+Agradecimientos
+--------------------------------------
 Agradecimientos a http://www.aeurus.cl y a Robinson Navarro el de la idea de éste validador de formularios.
+
+Ejemplo
+--------------------------------------
+ http://jsbin.com/ohagu3/1/
