Arreglada algunas funcionalidades y agregadas nuevas opciones

--- a/README
+++ b/README
@@ -1,11 +1,11 @@
-Autor
+Autor:
 --------------------------------------
 Desarrollado por Esteban Fuentealba
 
-Agradecimientos
+Agradecimientos:
 --------------------------------------
 Agradecimientos a http://www.aeurus.cl y a Robinson Navarro el de la idea de éste validador de formularios.
 
-Ejemplo
+Ejemplo:
 --------------------------------------
- http://jsbin.com/ohagu3/1/
+http://jsbin.com/ohagu3/3/
